- added support for promises for the `OPENCLIENT()` method
- added support for promises for the `FileStorage`
- added support for promises for the `HttpFile`
- added support for promises for the `TMSCLIENT().call()` method
- added support for promises for the `Mail.try()` method
- added support for promises for the `REQUEST()` method
- added support for promises for the `EXEC()` method

========================
0.0.51
========================

- removed useless spaces from the command-line utility
- added `instance.variables(str)` to the `FlowStream` instance
- (critical) fixed compiling of builds
- improved extensions
- added TMS auto-sync for new or removed pub/sub/rpc
- added transforming `controller.url` to lower-case
- fixed comparing `url` with all registered proxies (`url` address compared as lower-case)
- fixed loading resources via `LOADRESOURCE()`
- fixed `translate` command in the command-line tool
- added `extend` method to the `NEWEXTENSION()`
- added `OPENCLIENT()` method that simplifies work with Total.js Open products
- increased clean-up timeout in the FlowStream
- fixed `EXEC()` with `WebSocketClient` controller
- fixed clean-up of zombie FlowStream connections
- fixed error handling in the WebSocket

========================
0.0.50
========================

- fixed `filestorage.rename()` method
- debug mode skips all `.js` files in the root
- extended `MiddlewareOptions` by adding `url` property
- improved middleware functionality
- improved `HTTP` server in terminal utility
- added a check for existance of this.uri by @fenddigital
- removed `.trim()` from the `String.parseComponet()` method
- fixed cleaning design in the FlowStream
- added a small support for Groups and Tabs into the FlowStream
- fixed API routing with same `paths` with various HTTP methods
- added `path` property to `SchemaOptions`, `OperationOptions`, `TaskOptions`, `AuthOptions` and `MiddlewareOptions`